--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-	<title>Meghna | Responsive Multipurpose Parallax HTML5 Template</title>
+	<title>Rivelto</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
