--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Welcome Slider
  				<i class="tf-ion-play"></i>
  			</a>
  		</div>
- 		<h1>Experience the new reality</h1>
+ 		<h1>Software with a purpose</h1>
  		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, excepturi. At recusandae sit perferendis
  			autem,iste tempora nostrum numquam sapiente!</p>
  		<a href="#services" class="btn btn-transparent smooth-scroll">Explore Us</a>
