--- a/index.html
+++ b/index.html
@@ -652,28 +652,16 @@ Start Counter Section
 			<!-- Contact Details -->
 			<div class="contact-info col-lg-6 wow fadeInUp" data-wow-duration="500ms">
 				<h3>Contact Details</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex
-					explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore
-					adipisci.</p>
+				<p>Do you have any questions or need to contact us? Fill out our contact form or shoot us an email!</p>
 				<div class="contact-details">
 					<div class="con-info clearfix">
 						<i class="tf-map-pin"></i>
-						<span>Khaja Road, Bayzid, Chittagong, Bangladesh</span>
-					</div>
-
-					<div class="con-info clearfix">
-						<i class="tf-ion-ios-telephone-outline"></i>
-						<span>Phone: +880-31-000-000</span>
-					</div>
-
-					<div class="con-info clearfix">
-						<i class="tf-ion-iphone"></i>
-						<span>Fax: +880-31-000-000</span>
+						<span>Proudly located in Texas, United States!</span>
 					</div>
 
 					<div class="con-info clearfix">
 						<i class="tf-ion-ios-email-outline"></i>
-						<span>Email: hello@meghna.com</span>
+						<span>Email: support@rivelto.com</span>
 					</div>
 				</div>
 			</div>
@@ -681,22 +669,22 @@ Start Counter Section
 
 			<!-- Contact Form -->
 			<div class="contact-form col-lg-6 mt-4 mt-lg-0 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-				<form id="contact-form" method="post" action="sendmail.php" role="form">
+				<form id="contact-form" name="contact-form" action="https://docs.google.com/forms/d/e/1FAIpQLSc5osWWGOqFP5n4FtmoRkJcPUzR0cWIawwTykAdPv4mbLx8bA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
 
 					<div class="form-group">
-						<input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
+						<input type="text" placeholder="Your Name" class="form-control" name="entry.1404811389" id="entry.1404811389">
 					</div>
 
 					<div class="form-group">
-						<input type="email" placeholder="Your Email" class="form-control" name="email" id="email">
+						<input type="email" placeholder="Your Email" class="form-control" name="entry.1554308222" id="entry.1554308222">
 					</div>
 
 					<div class="form-group">
-						<input type="text" placeholder="Subject" class="form-control" name="subject" id="subject">
+						<input type="text" placeholder="Subject" class="form-control" name="entry.568776781" id="entry.568776781">
 					</div>
 
 					<div class="form-group">
-						<textarea rows="6" placeholder="Message" class="form-control" name="message" id="message"></textarea>
+						<textarea rows="6" placeholder="Message" class="form-control" name="entry.666865113" id="entry.666865113"></textarea>
 					</div>
 
 					<div id="cf-submit">
@@ -704,19 +692,13 @@ Start Counter Section
 					</div>
 
 				</form>
+
+				<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 			</div>
 			<!-- ./End Contact Form -->
 
 		</div> <!-- end row -->
 	</div> <!-- end container -->
-
-	<!-- Google Map -->
-	<div class="google-map">
-		<!-- Google Map -->
-		<div id="map_canvas" data-latitude="51.507351" data-longitude="-0.127758"></div>
-	</div>
-	<!-- /Google Map -->
-
 </section> <!-- end section -->
 
 <!-- end Contact Area
@@ -787,6 +769,16 @@ Start Counter Section
 	<script src="plugins/wow/wow.min.js"></script>
 	<!-- Custom js -->
 	<script src="js/script.js"></script>
+
+	<!-- Form Submission -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script type="text/javascript">var submitted=false;</script>
+	<script type="text/javascript">
+	$('#contact-form').on('submit', function(e) {
+	$('#contact-form *').fadeOut(1000);
+	$('#contact-form').prepend('Thanks for your submission! We\'ll be in touch 🙂');
+	});
+	</script>
 	
 	</body>
 </html>
