Update copyright to include Rivelto

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ Start Counter Section
 					<p class="mt-3">Copyright
 						&copy; <script>
 							document.write(new Date().getFullYear())
-						</script>. All Rights Reserved. <br> Designed &amp; Developed by <a href="http://www.themefisher.com">Themefisher</a>.</p>
+						</script>. All Rights Reserved. <br> Designed  &amp; Developed by <a href="http://www.themefisher.com">Themefisher</a> for Rivelto Software LLC.</p>
 				</div>
 				<!-- /copyright -->
 
