Remove portfolio section, remove team skills, fix some text

--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@ Welcome Slider
  			</a>
  		</div>
  		<h1>Software with a purpose</h1>
- 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, excepturi. At recusandae sit perferendis
- 			autem,iste tempora nostrum numquam sapiente!</p>
- 		<a href="#services" class="btn btn-transparent smooth-scroll">Explore Us</a>
+ 		<p>With millions of apps on the market, differentiating products from the competition is becoming increasingly difficult. At Rivelto, we take pride in innovation, prioritizing user experience to redefine what software <em>should</em> be.</p>
+ 		<!-- <a href="#services" class="btn btn-transparent smooth-scroll">Explore Us</a> -->
  	</div>
  </section>
 
@@ -124,9 +123,6 @@ Sticky Navigation
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact-us">Contact</a>
@@ -217,10 +213,9 @@ End Sticky Navigation
 			</div>
 			<div class="col-lg-6">
 				<div class="content-block">
-					<h2>We’re A Digital Design Agency.</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam tempora itaque, autem dolores culpa cum mollitia voluptate nesciunt voluptatibus quasi.</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eveniet vel et mollitia nemo corporis autem dolores culpa cum mollitia voluptate</p>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, magnam.</p>
+					<h2>We’re A Mobile-First Software Company.</h2>
+					<p>Phones are at the palm of our hands, and the vast majority of users use their phones day-to-day for their online needs. Why not ensure their experience is the best it can be?</p>
+					<p>At Rivelto, we embrace this entirely. Our products are optimized for mobile, accessible for anyone.</p>
 					<div class="row">
 						<div class="col-md-6">
 							<div class="media">
@@ -262,106 +257,38 @@ Start Call To Action
 			<div class="col-md-12 text-center">
 				<h2>Great Design & Incredible Features</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis tenetur odio impedit incidunt? <br> Omnis accusantium ea reiciendis, fugit commodi nostrum.</p>
-				<a href="contact.html" class="btn btn-main">Start a project with us</a>
+				<!-- <a href="contact.html" class="btn btn-main">Start a project with us</a> -->
 			</div>
 		</div> <!-- End row -->
 	</div> <!-- End container -->
 </section> <!-- End section -->
 
-<!-- Start Team Skills
-		=========================================== -->
-
-<section id="team-skills" class="parallax-section section section-bg overly">
-	<div class="container">
-		<div class="row">
-			<!-- section title -->
-			<div class="col-md-12">
-				<div class="title text-center">
-					<h2>Our <span class="color">Skills</span></h2>
-					<div class="border"></div>
-				</div>
-			</div>
-			<!-- /section title -->
-		</div> <!-- End row -->
-		<div class="row">
-			<div class="col-md-6">
-				<h2>We’ve skilled in wide range of web and <br>
-					Other digital market tools.</h2>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis magni explicabo cum aperiam recusandae
-					sunt accusamus totam. Quidem quos fugiat sapiente numquam accusamus quas hic, itaque in libero reiciendis
-					tempora!</p>
-				<img class="img-fluid" src="images/about/company-growth.png" alt="">
-			</div>
-			<div class="col-md-6 mt-4 mt-md-0">
-				<ul class="skill-bar">
-					<li>
-						<p><span>01-</span> Business Development</p>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-								style="width:90%">
-							</div>
-						</div>
-					</li>
-					<li>
-						<p><span>02-</span> Analysis</p>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-								style="width:70%">
-							</div>
-						</div>
-					</li>
-					<li>
-						<p><span>03-</span> Design</p>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-								style="width:85%">
-							</div>
-						</div>
-					</li>
-					<li>
-						<p><span>04-</span> IOS Development</p>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-								style="width:60%">
-							</div>
-						</div>
-					</li>
-					<li>
-						<p><span>04-</span> Andriod Development</p>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-								style="width:94%">
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div> <!-- End container -->
-</section> <!-- End section -->
 
 <!-- Start Portfolio Section
 =========================================== -->
 
 <section class="portfolio section" id="portfolio">
-	<div class="container">
+	<!-- <div class="container">
 		<div class="row ">
 			<div class="col-lg-12">
-				<!-- section title -->
 				<div class="title text-center">
 					<h2>Our <span class="color">Works</span></h2>
 					<div class="border"></div>
 				</div>
-				<!-- /section title -->
-			</div> <!-- /end col-lg-12 -->
-		</div> <!-- end row -->
-		<div class="row">
+			</div>
+		</div> -->
+
+		<!-- NOTE: To add new items into portfolio, specify a data filter,
+			image source, link, heading, and paragraph. See example below.
+		 -->
+		 
+		<!-- <div class="row">
 			<div class="col-md-12">
 				<div class="portfolio-filter">
 					<button class="active" type="button" data-filter="all">All</button>
-					<button type="button" data-filter="photography">Photography</button>
-					<button type="button" data-filter="design">Design</button>
-					<button type="button" data-filter="development">Development</button>
+					<button type="button" data-filter="mobile-apps">Mobile Apps</button>
+					<button type="button" data-filter="tools">Tools</button>
+					<button type="button" data-filter="other">Other</button>
 				</div>
 			</div>
 		</div>
@@ -379,111 +306,7 @@ Start Call To Action
 					</div>
 				</div>
 			</div>
-			<div class="filtr-item col-lg-4 col-md-6" data-category="design">
-				<div class="portfolio-block">
-					<img src="images/portfolio/portfolio-2.jpg" alt="">
-					<div class="caption">
-						<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-2.jpg"
-							data-lightbox="image-1">
-							<i class="tf-ion-android-search"></i>
-						</a>
-						<h4><a href="">Sound system</a></h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-					</div>
-				</div>
-			</div>
-			<div class="filtr-item col-lg-4 col-md-6" data-category="design, development">
-				<div class="portfolio-block">
-					<img src="images/portfolio/portfolio-3.jpg" alt="">
-					<div class="caption">
-						<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-3.jpg"
-							data-lightbox="image-1">
-							<i class="tf-ion-android-search"></i>
-						</a>
-						<h4><a href="">Clock Product</a></h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-					</div>
-				</div>
-			</div>
-			<div class="filtr-item col-lg-4 col-md-6" data-category="photography, development">
-				<div class="portfolio-block">
-					<img src="images/portfolio/portfolio-4.jpg" alt="">
-					<div class="caption">
-						<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-4.jpg"
-							data-lightbox="image-1">
-							<i class="tf-ion-android-search"></i>
-						</a>
-						<h4><a href="">Bottol Label</a></h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-					</div>
-				</div>
-			</div>
-			<div class="filtr-item col-lg-4 col-md-6" data-category="design">
-				<div class="portfolio-block">
-					<img src="images/portfolio/portfolio-5.jpg" alt="">
-					<div class="caption">
-						<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-5.jpg"
-							data-lightbox="image-1">
-							<i class="tf-ion-android-search"></i>
-						</a>
-						<h4><a href="">Shopping Bag</a></h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-					</div>
-				</div>
-			</div>
-			<div class="filtr-item col-lg-4 col-md-6" data-category="photography">
-				<div class="portfolio-block">
-					<img src="images/portfolio/portfolio-6.jpg" alt="">
-					<div class="caption">
-						<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-6.jpg"
-							data-lightbox="image-1">
-							<i class="tf-ion-android-search"></i>
-						</a>
-						<h4><a href="">Tag Design</a></h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-					</div>
-				</div>
-			</div>
-			<div class="filtr-item col-lg-4 col-md-6" data-category="design">
-				<div class="portfolio-block">
-					<img src="images/portfolio/portfolio-7.jpg" alt="">
-					<div class="caption">
-						<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-7.jpg"
-							data-lightbox="image-1">
-							<i class="tf-ion-android-search"></i>
-						</a>
-						<h4><a href="">Business Card</a></h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-					</div>
-				</div>
-			</div>
-			<div class="filtr-item col-lg-4 col-md-6" data-category="design">
-				<div class="portfolio-block">
-					<img src="images/portfolio/portfolio-8.jpg" alt="">
-					<div class="caption">
-						<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-8.jpg"
-							data-lightbox="image-1">
-							<i class="tf-ion-android-search"></i>
-						</a>
-						<h4><a href="">Stationary Design</a></h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-					</div>
-				</div>
-			</div>
-			<div class="filtr-item col-lg-4 col-md-6" data-category="photography, development">
-				<div class="portfolio-block">
-					<img src="images/portfolio/portfolio-1.jpg" alt="">
-					<div class="caption">
-						<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-1.jpg"
-							data-lightbox="image-1">
-							<i class="tf-ion-android-search"></i>
-						</a>
-						<h4><a href="">Tag Design</a></h4>
-						<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-					</div>
-				</div>
-			</div>
-		</div>
+		</div> -->
 	</div> <!-- end container -->
 </section> <!-- End section -->
 
