Wrap up remaining changes

--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@ End Sticky Navigation
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3 class="ddd">We're Creative</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<p>Our products aren't your typical software products. We design state-of-the-art products for our users.</p>
 					</div>
 				</div>
 			</div>
@@ -178,8 +177,7 @@ End Sticky Navigation
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3>We're Professional</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<p>Our experience is the best in the industry. We use the right tools for the job without cutting any corners.</p>
 					</div>
 				</div>
 			</div>
@@ -193,9 +191,8 @@ End Sticky Navigation
 					</div>
 					<!-- Express About Yourself -->
 					<div class="content text-center">
-						<h3>We're Genius</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<h3>We're Innovative</h3>
+						<p>Technology changes rapidly. We're always working with cutting edge technology to shape the industry.</p>
 					</div>
 				</div>
 			</div>
@@ -223,9 +220,8 @@ End Sticky Navigation
 									<i class="tf-circle-compass"></i>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">SEO Optimized</h4>
-									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus
-										eos saepe</p>
+									<h4 class="media-heading">Mobile Optimized</h4>
+									<p>Our products are developed by mobile engineers, for mobile.</p>
 								</div>
 							</div>
 						</div>
@@ -235,8 +231,8 @@ End Sticky Navigation
 									<i class="tf-hotairballoon"></i>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">Easy Customization</h4>
-									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus
+									<h4 class="media-heading">Flexibility</h4>
+									<p>Users like to use phones <em>their</em> way. For our products, flexibility and customizability exists by design.
 									</p>
 								</div>
 							</div>
@@ -256,8 +252,6 @@ Start Call To Action
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<h2>Great Design & Incredible Features</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis tenetur odio impedit incidunt? <br> Omnis accusantium ea reiciendis, fugit commodi nostrum.</p>
-				<!-- <a href="contact.html" class="btn btn-main">Start a project with us</a> -->
 			</div>
 		</div> <!-- End row -->
 	</div> <!-- End container -->
