--- a/index.html
+++ b/index.html
@@ -394,6 +394,9 @@ Start Call To Action
 						</svg>
 					</a>
 
+					<p class="mt-3"><a href="privacy.html">Privacy Policy</a></p>
+
+
 					<p class="mt-3">Copyright
 						&copy; <script>
 							document.write(new Date().getFullYear())
