Add contact form

--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-	<title>Rivelto</title>
+	<title>Privacy Policy</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
